fix z-index for profile card image

--- a/src/index.css
+++ b/src/index.css
@@ -292,8 +292,9 @@ Styles
     height: 10%;
   }
   .profile-card__img {
-    z-index: -2;
+    z-index: -1;
   }
+  
 
   .hero-info h1 {
     font-size: 2rem;
@@ -304,6 +305,8 @@ Styles
     font-size: 1rem;
   
   }
+
+  
 
   .Daniel-img {
   width: 60%;
@@ -320,8 +323,9 @@ Styles
  }
 
  .footer {
-   position: absolute;
-   bottom: 0;
+   
+    height: 100%;
+  
  }
 
 .login-btn {
@@ -572,8 +576,11 @@ Styles
 
  
 .footer {
-   position: absolute;
-   bottom: 0;
+   
+   
+    height: 100%;
+  
+ 
  }
 
   
@@ -1044,7 +1051,7 @@ a, a:hover {
   border-radius: 50%;
   overflow: hidden;
   position: relative;
-  z-index: 2;
+  z-index: 1;
   box-shadow: 0px 5px 50px 0px #ffffff, 0px 0px 0px 7px rgba(255, 255, 255, 0.5);
 }
 @media screen and (max-width: 576px) {
